fix: spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,11 +11,18 @@ a {
     border-radius: 5px;
     text-decoration: none;
     color: white;
+    cursor: pointer;
+    text-align: left;
+}
+a:hover {
+  color: hotpink;
+}
+a:active {
+  color: blue;
 }
 button {
     margin-right: 20px;
     background-color: rgb(24, 115, 124);
-    border: none;
     color: rgb(122, 184, 156);
     font-size: 20px;
     cursor: pointer;
@@ -35,6 +42,12 @@ h2 {
     -webkit-background-clip: text;
     background-clip: text;
     animation: animate 5s linear infinite;
+    padding-bottom: 10px;
+    text-decoration: underline;
+    text-decoration-color: orange;
+}
+#main {
+    text-align: left;
 }
 @keyframes animate {
     0%{
@@ -45,5 +58,17 @@ h2 {
     }
 }
 div {
-    padding: 20px
+    padding: 20px;
+    height: 80vh;
+    text-align: center;
+}
+img {
+    width: 150px;
+    height: auto;
+}
+ul {
+    list-style-type: none;
+}
+li {
+    margin-bottom: 10px;
 }
